test/fail/classes/property_no_exist_var_missing.lly
#[
SyntaxError: Property xyz is not in class Test. ('var' keyword missing?)
    from property_no_exist_var_missing.lly:8
]#

class Test
{
    @xyz = 10
}
